2008-06-13  Mark Probst  <mark.probst@gmail.com>

	* mini.c: Generic sharing of ldftn.

2008-06-13  Mark Probst  <mark.probst@gmail.com>

	* mini.c: Do pass VTable/RGCTX argument to static generic methods.

2008-06-13  Mark Probst  <mark.probst@gmail.com>

	* mini.c: Generic sharing of the special case of ldtoken followed
	by a call to GetTypeFromHandle.

2008-06-13  Mark Probst  <mark.probst@gmail.com>

	* mini.c: Generic sharing of box for nullable types.

2008-06-13  Zoltan Varga  <vargaz@gmail.com>

	* mini-s390x.c (add_stackParm): Fix computation of offsets when arguments
	are passed on the stack. Fixes #324807.

2008-06-12  Bill Holmes  <billholmes54@gmail.com>

	* mini-amd64.c:add_valuetype: Adding Winx64 code to fill the ArgInfo
	for the ArgValuetypeAddrInIReg case.

	* mini-amd64.c:mono_arch_allocate_vars:  Adding a case for 
	ArgValuetypeAddrInIReg to avoid asserts.  Code needs to be added here.

	* mini-amd64.c: mono_arch_call_opcode:  Adding Winx64 code for an ArgInfo of 
	type ArgValuetypeAddrInIReg.  The code emitted will copy the argument to a 
	local variable and pass the local variable by reference to the called method.
	  
	* mini-amd64.c: mono_arch_emit_prolog:  Adjust the stack for calls to
	mono_jit_thread_attach and mono_get_lmf_addr for Winx64.

	Contributed under MIT/X11 license.

2008-06-10  Rodrigo Kumpera  <rkumpera@novell.com>

	* debug-mini.c (mono_debug_free_method_jit_info): Moved to metadata/mono-debug.c.

	* debug-mini.c (mono_debug_print_vars): Release memory after printing
	everything.

2008-06-10  Martin Baulig  <martin@ximian.com>

	* debug-mini.c
	(mono_debug_close_method): Check whether `cfg->epilogue_begin != NULL'.

2008-06-09  Kornél Pál  <kornelpal@gmail.com>

	* main.c: Add and set argv [argc] to NULL to match C specification that fixes
	possible error when no arguments are passed.

	Contributed under MIT/X11 license.

2008-06-09  Rodrigo Kumpera  <rkumpera@novell.com>
